# Pkim11IntelligentRobotics

./: .gitignore  README.md
IR_catkin_ws/src/planar2r_description/: CMakeLists.txt
IR_catkin_ws/src/planar2r_kinematics/: CMakeLists.txt
IR_catkin_ws/src/planar2r_kinematics/include/: ROS_Planar2R.hpp
IR_catkin_ws/src/planar2r_kinematics/scripts/: planar2r_kinematics_plotXY (copy).py  planar2r_kinematics_plotXY.py
IR_catkin_ws/src/planar2r_kinematics/src/: genConfig.cpp  geometry_shapes.cpp  inputObject.cpp  simpleTraj.cpp  workingCopy.cpp
IR_catkin_ws/src/planar3r_kinematics/: CMakeLists.txt
IR_catkin_ws/src/spatial3r_kinematics/: CMakeLists.txt
IR_catkin_ws/src/spatial3r_kinematics/src/: pkProj.cpp  (+2 more)
IR_library/: Makefile  Makefile (another copy)  Makefile (copy)
IR_library/devel/: .catkin  .rosinstall  setup.sh
IR_library/gtest/: CMakeCache.txt  Makefile  cmake_install.cmake
IR_library/include/: ForwardKinematics (another copy).hpp  ForwardKinematics.hpp  InverseKinematics.hpp  Jacobian.hpp  MathUtils.hpp  Planar2R.hpp  Planar2Rmod.hpp  Planar3R.hpp  RigidBodyMotion.hpp  Spatial3R.hpp  TypeDefs.hpp
IR_library/main/: Makefile  Planar2R.cpp  checkRigidBodyMotion.cpp  gradeAll.cpp  mod2R.cpp  simple2R.cpp  test3r.cpp
IR_library/old/: Makefile  gradeAll.cpp
IR_library/src/: ForwardKinematics.cpp  InverseKinematics.cpp  Jacobian (copy).cpp  Jacobian.cpp  MathUtils (copy).cpp  MathUtils.cpp  Planar2R.cpp  Planar3R.cpp  RigidBodyMotion (copy).cpp  Spatial3R.cpp
IR_library/testingBin/: Planar2R.hpp  RigidBodyMotion.hpp  Spatial3R.hpp  spatial3r.cpp
(+14 files in other folders)
